# computer-use

./: .gitignore  README.md  SPEC.md  mt4_login.py  pyproject.toml
src/computer_use/: actions.py  agent.py  ai.py  cli.py  platform.py  screenshot.py  workspace.py
tests/: test_actions.py  test_ai.py  test_platform.py  test_screenshot.py  test_workspace.py
